<resources>
    <string name="app_name">Saveo App</string>
    <string name="movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie Name</string>
    <string name="rating">rating</string>
    <string name="hash">|</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="crimee">  CRIME</string>
    <string name="synopsis">Synopsis</string>
</resources>